--- a/init.sun4i.rc
+++ b/init.sun4i.rc
@@ -55,6 +55,7 @@ on boot
 
 on post-fs-data
 	mkdir /data/misc/sensors 0777 system system
+	setprop vold.post_fs_data_done 1
 
 service wpa_supplicant /system/bin/wpa_supplicant -Dnl80211 -iwlan0 -c/data/misc/wifi/wpa_supplicant.conf
 	socket wpa_wlan0 dgram 660 wifi wifi
