--- a/init.sun4i.rc
+++ b/init.sun4i.rc
@@ -36,6 +36,7 @@ on boot
 	insmod /system/lib/modules/videobuf-dma-contig.ko   
 	insmod /system/lib/modules/gc0308.ko
 	insmod /system/lib/modules/gc0308b.ko
+	insmod /system/lib/modules/gc2015.ko
 	insmod /system/lib/modules/gt2005.ko
 	insmod /system/lib/modules/mt9m112.ko
 	insmod /system/lib/modules/ov5640.ko
