add camera module for vi10 elite

--- a/init.sun4i.rc
+++ b/init.sun4i.rc
@@ -40,6 +40,7 @@ on boot
 	insmod /system/lib/modules/gt2005.ko
 	insmod /system/lib/modules/mt9m112.ko
 	insmod /system/lib/modules/ov5640.ko
+	insmod /system/lib/modules/gc0307.ko
 	insmod /system/lib/modules/sun4i_csi1.ko
 	insmod /system/lib/modules/sun4i_csi0.ko
 	# usb ethernet drivers
