--- a/init.rc
+++ b/init.rc
@@ -5,8 +5,7 @@
 #
 
 import /init.sun4i.rc
-import /init.usb.rc
-import /init.trace.rc
+import /init.sun4i.usb.rc
 
 on early-init
     # Set init and its forked children's oom_adj.
