--- a/init.rc
+++ b/init.rc
@@ -428,7 +428,7 @@ service ril-daemon /system/bin/rild -l liballwinner-ril.so -- -d /dev/ttyUSB2
     socket rild stream 660 root radio
     socket rild-debug stream 660 radio system
     user root
-    group radio cache inet misc audio sdcard_rw qcom_oncrpc diag
+    group radio cache inet misc audio sdcard_r sdcard_rw qcom_oncrpc diag log
 
 service surfaceflinger /system/bin/surfaceflinger
     class main
